# todoApp_hackathone_2.1

./: .gitignore  README.md  main.py  pyproject.toml  todo_data.json  validate_functionality.py
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/constitution/: 001-initial-project-setup.constitution.prompt.md
history/prompts/todo-app/: 1-simple-cli-todo-app.spec.prompt.md  2-generate-tasks-for-cli-todo-app.tasks.prompt.md  3-implement-cli-todo-app.green.prompt.md
specs/: 001-project-setup.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/main/contracts/: cli-commands.md
src/: __init__.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py  todo_service.py
src/ui/: __init__.py  cli.py  todo_cli.py
tests/integration/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_list_command.py  test_todo_app_integration.py  test_update_command.py
tests/unit/: test_project_setup.py  test_task_model.py  test_task_service.py  test_todo_service.py
