[project]
name = "evolution-of-todo"
version = "0.1.0"
description = "Evolution of Todo - Phase I: In-Memory Console Application"
authors = [{name = "Product Architect", email = "architect@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=3.0.0",
]