[project]
name = "simple-cli-todo-app"
version = "0.1.0"
description = "A simple CLI-based Todo application"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "P", "Q", "R", "S", "T", "U", "W", "X", "Y", "Z"]
unfixable = []

# Number of characters per line.
line-length = 88

# Number of spaces per indentation level.
indent-width = 4

# Target Python version.
target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Enable auto-detection of file encodings.
detect-encoding = true